docker compose: Using uvicorn to start django app

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   django:
     build: .
-    command: python trend_link/manage.py runserver 0.0.0.0:8000
+    command: python -m uvicorn trend_link.asgi:application --host 0.0.0.0 --port 8000
     ports:
       - "8000:8000"
     depends_on:
@@ -16,6 +16,7 @@ services:
       - POSTGRES_HOST=postgres
     volumes:
       - .:/app
+    working_dir: /app/trend_link
 
   postgres:
     image: postgres:latest
