--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,8 +4,6 @@ services:
   django:
     build: .
     command: python -m uvicorn trend_link.asgi:application --host 0.0.0.0 --port 8000
-    ports:
-      - "8000:8000"
     depends_on:
       - postgres
     environment:
@@ -27,5 +25,11 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
+  
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+    
 volumes:
   postgres_data:
