--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,6 +30,8 @@ services:
     image: nginx:latest
     ports:
       - "80:80"
+    volumes:
+      - ./trend_link/nginx.conf:/etc/nginx/conf.d/default.conf
     
 volumes:
   postgres_data:
