--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,22 +6,16 @@ services:
     command: python -m uvicorn trend_link.asgi:application --host 0.0.0.0 --port 8000
     depends_on:
       - postgres
-    environment:
-      - ENVIRONMENT=development
-      - POSTGRES_DB=mydbname
-      - POSTGRES_USER=myuser
-      - POSTGRES_PASSWORD=mypassword
-      - POSTGRES_HOST=postgres
+    env_file:
+      - .env
     volumes:
       - .:/app
     working_dir: /app/trend_link
 
   postgres:
     image: postgres:latest
-    environment:
-      - POSTGRES_DB=mydbname
-      - POSTGRES_USER=myuser  
-      - POSTGRES_PASSWORD=mypassword
+    env_file:
+      - .env
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
