--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 Django==5.0.6
 psycopg2==2.9.9
-uvicorn==0.30.1
+uvicorn[standard]
 Pillow==10.4.0
 pytest-django==4.8.0
 djangorestframework==3.15.2
 boto3==1.34.144
 django-storages==1.14.4
+channels==4.1.0
+channels-redis==4.2.0
+websockets
+wsproto
