--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-Django==5.0.6
-psycopg2==2.9.9
-uvicorn[standard]==0.30.1
-Pillow==10.4.0
-pytest-django==4.8.0
-djangorestframework==3.15.2
-boto3==1.34.144
-django-storages==1.14.4
-channels==4.1.0
-channels-redis==4.2.0
-websockets==12.0
-wsproto==1.2.0
-django_health_check==3.18.3
+Django~=5.0.6
+psycopg2~=2.9.9
+uvicorn[standard]~=0.30.1
+Pillow~=10.4.0
+pytest-django~=4.8.0
+djangorestframework~=3.15.2
+boto3~=1.34.144
+django-storages~=1.14.4
+channels~=4.1.0
+channels-redis~=4.2.0
+websockets~=12.0
+wsproto~=1.2.0
+django_health_check~=3.18.3
